Fri Jun  3 18:46:50 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Base.h:

          Made the ACE_CDR::LongDouble struct constructor from native
          long double explicit, which eliminates compiler ambiguities
          when the struct's '==' and '!=' operators are used with
          a native long double rhs.

Wed Jun  1 19:30:44 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Base.cpp:
        * ace/CDR_Base.h:

          To the struct ACE_CDR::LongDouble, used for platforms with
          a native long double that isn't 16 bytes, added an
          assignment operator and a constructor. The former is for
          internal use by the IDL compiler, and the latter is for
          code generation for long double constants. For types
          using the non-native struct, a const declaration is
          impossible to initialize by assignment to a literal,
          so a constructor is generated instead.

Wed Jun  1 10:17:33 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * bin/fuzz.pl:
          Fixed typo.

Wed Jun  1 05:53:10 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/APG/Naming/Temperature_Monitor2.cpp:
        * examples/IPC_SAP/SSL_SAP/SSL-client-simple.cpp:
        * tests/Bug_3943_Regression_Test.cpp:
        * tests/Proactor_UDP_Test.cpp:
          Resolved gcc 4.6 warning: variable was set but not used.

Tue May 31 09:16:33 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          OBS now stands for Open Build Service

Tue May 31 07:13:01 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ACEXML/examples/SAXPrint/main.cpp:
          Fixed compile error.

Mon May 30 18:44:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACEXML/examples/SAXPrint/main.cpp:
          Fixed gcc 4.6 warning

        * docs/bczar/bczar.html:
          Added some more packages

Fri May 27 14:44:01 UTC 2011  Marcel Smit  <msmit@remedy.nl>
